--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
-  "name": "ninja_api",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Gilbert kitetu",
-  "license": "MIT",
-  "dependencies": {
-    "express": "^4.17.1"
-  }
+    "name": "ninja_api",
+    "version": "1.0.0",
+    "description": "",
+    "main": "module",
+    "scripts": {
+        "start": "nodemon index"
+    },
+    "author": "Gilbert kitetu",
+    "license": "MIT",
+    "dependencies": {
+        "express": "^4.17.1"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.7"
+    }
 }
